<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_toppra</name>
  <version>0.3.0</version>
  <description>Time Optimal Path Parameterization based on Reachability Analysis (TOPP-RA) wrapper for RoboPlan.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roboplan</depend>
  <!-- uncomment when toppra is on the ROS buildfarm for all distros -->
  <!-- <depend>toppra</depend> -->

  <test_depend>roboplan_example_models</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
